[package]
name = "tauri-dioxus"
version = "0.1.0"
authors = ["Viet Dinh <54ckb0y789@gmail.com>"]
edition = "2021"
default-run = "tauri-dioxus-desktop"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tauri-dioxus-desktop"
path = "gen/bin/desktop.rs"

[features]
default = ["inline-css"]
inline-css = []

[package.metadata.cargo-android]
app-activity-name = ".MainActivity"
app-dependencies = [
    "androidx.webkit:webkit:1.4.0",
    "androidx.appcompat:appcompat:1.5.0",
    "com.google.android.material:material:1.6.1",
]
project-dependencies = [ "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10" ]
app-plugins = [ "org.jetbrains.kotlin.android" ]
app-permissions = [ "android.permission.INTERNET" ]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[package.metadata.cargo-android.env-vars]
WRY_ANDROID_REVERSED_DOMAIN = "com.example"
WRY_ANDROID_APP_NAME_SNAKE_CASE = "tauri_dioxus"
WRY_ANDROID_KOTLIN_FILES_OUT_DIR = "<android-project-dir>/app/src/main/kotlin/com/example"

[package.metadata.cargo-apple.ios]
frameworks = [ "WebKit" ]

[dependencies]
dioxus = { version = "0.2.4", path = "dioxus-master/packages/dioxus" }

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = { version = "0.2.1", path = "dioxus-master/packages/web" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wry = "0.23.4"
dioxus-desktop = { version = "0.2.3", path = "dioxus-master/packages/desktop" }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
paste = "1.0"
android_logger = "0.9.0"